deploy/sas-bases/overlays/network/networking.k8s.io/v1/ingress/components/sas-data-explorer-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Sas-Ingress-Request "true";
    nginx.ingress.kubernetes.io/proxy-body-size: 25g
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /SASDataExplorer/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    nginx.ingress.kubernetes.io/use-regex: "true"
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-explorer-app
    sas.com/admin: namespace
  name: sas-data-explorer-app
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-data-explorer-app
            port:
              number: 80
        path: /SASDataExplorer(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-data-explorer-app
            port:
              number: 80
        path: /SASDataExplorer(/|$)(.*)
        pathType: ImplementationSpecific
